# rust-hashcracker

./: Cargo.toml  README.md
src/: main.rs
